[gd_scene load_steps=50 format=3 uid="uid://2i8jubglwpoi"]

[ext_resource type="Script" path="res://scripts/Player/player.gd" id="1_1ejx3"]
[ext_resource type="Texture2D" uid="uid://buvo8nxgeb71a" path="res://Assets/Packs/Sunnyland/sprites/player/idle/player-idle-1.png" id="2_6gqi5"]
[ext_resource type="Script" path="res://scripts/Player/player_collision.gd" id="2_kycny"]
[ext_resource type="Texture2D" uid="uid://df2ihl8va02" path="res://Assets/Packs/Sunnyland/sprites/player/climb/player-climb-1.png" id="2_tymr5"]
[ext_resource type="Texture2D" uid="uid://crbasevqd33k3" path="res://Assets/Packs/Sunnyland/sprites/player/climb/player-climb-2.png" id="3_7lrp0"]
[ext_resource type="Texture2D" uid="uid://n6t213bpnqrv" path="res://Assets/Packs/Sunnyland/sprites/player/idle/player-idle-2.png" id="3_62rup"]
[ext_resource type="Texture2D" uid="uid://dmshif1pgf8rq" path="res://Assets/Packs/Sunnyland/sprites/player/idle/player-idle-3.png" id="4_07ndu"]
[ext_resource type="Texture2D" uid="uid://bpcjknaweoil1" path="res://Assets/Packs/Sunnyland/sprites/player/climb/player-climb-3.png" id="4_butdf"]
[ext_resource type="Texture2D" uid="uid://da1n3gnnbix0j" path="res://Assets/Packs/Sunnyland/sprites/player/crouch/player-crouch-1.png" id="5_10uod"]
[ext_resource type="Texture2D" uid="uid://b3shuu6fj5kjp" path="res://Assets/Packs/Sunnyland/sprites/player/idle/player-idle-4.png" id="5_gkfwk"]
[ext_resource type="Texture2D" uid="uid://ce1xy727tkuaf" path="res://Assets/Packs/Sunnyland/sprites/player/crouch/player-crouch-2.png" id="6_6vwp5"]
[ext_resource type="Texture2D" uid="uid://4d37j63gteup" path="res://Assets/Packs/Sunnyland/sprites/player/hurt/player-hurt-1.png" id="7_cp6hc"]
[ext_resource type="Texture2D" uid="uid://bjeool2ym2eba" path="res://Assets/Packs/Sunnyland/sprites/player/hurt/player-hurt-2.png" id="8_tndvr"]
[ext_resource type="Texture2D" uid="uid://c0ej4p3mjs6kj" path="res://Assets/Packs/Sunnyland/sprites/player/jump/player-jump-1.png" id="13_4xbbu"]
[ext_resource type="Texture2D" uid="uid://cawwfkyal7v70" path="res://Assets/Packs/Sunnyland/sprites/player/jump/player-jump-2.png" id="14_k50ao"]
[ext_resource type="Texture2D" uid="uid://bauaynkutkfuo" path="res://Assets/Packs/Sunnyland/sprites/player/run/player-run-1.png" id="15_k3h7w"]
[ext_resource type="Texture2D" uid="uid://em1ce4as4qw7" path="res://Assets/Packs/Sunnyland/sprites/player/run/player-run-2.png" id="16_faxn5"]
[ext_resource type="Texture2D" uid="uid://cwmadygg6g015" path="res://Assets/Packs/Sunnyland/sprites/player/run/player-run-3.png" id="17_cq15p"]
[ext_resource type="Texture2D" uid="uid://0dap45p0tjma" path="res://Assets/Packs/Sunnyland/sprites/player/run/player-run-4.png" id="18_1qroo"]
[ext_resource type="Texture2D" uid="uid://drbr0br40mxy2" path="res://Assets/Packs/Sunnyland/sprites/player/run/player-run-5.png" id="19_timjc"]
[ext_resource type="Texture2D" uid="uid://bnstce2wk3kww" path="res://Assets/Packs/Sunnyland/sprites/player/run/player-run-6.png" id="20_cfqvn"]
[ext_resource type="Script" path="res://scripts/Player/States/player_state_machine.gd" id="21_cwfjb"]
[ext_resource type="Script" path="res://scripts/Player/player_animation.gd" id="21_khnir"]
[ext_resource type="Script" path="res://scripts/Player/States/player_idle.gd" id="22_h6556"]
[ext_resource type="Script" path="res://scripts/Player/States/player_moving.gd" id="23_pb7fr"]
[ext_resource type="Script" path="res://scripts/Player/player_offensive_area.gd" id="23_towy0"]
[ext_resource type="Script" path="res://scripts/Player/States/player_jumping.gd" id="24_6bulw"]
[ext_resource type="Script" path="res://scripts/Player/player_collectable_area.gd" id="24_ei36t"]
[ext_resource type="Script" path="res://scripts/Player/States/player_falling.gd" id="25_g30nj"]
[ext_resource type="Script" path="res://scripts/Player/player_interaction.gd" id="25_uofy8"]
[ext_resource type="Script" path="res://scripts/Player/player_climbable_area.gd" id="26_g813b"]
[ext_resource type="Script" path="res://scripts/Player/States/player_dying.gd" id="26_wvaxf"]
[ext_resource type="Script" path="res://scripts/Player/player_camera_visibility_notifier.gd" id="31_hscjk"]
[ext_resource type="Script" path="res://scripts/Player/player_input.gd" id="32_ry7qn"]
[ext_resource type="Script" path="res://scripts/Player/States/player_climbing.gd" id="33_n46td"]
[ext_resource type="Script" path="res://scripts/Player/player_sound_effects.gd" id="33_vix47"]
[ext_resource type="AudioStream" uid="uid://bnm7rtrgeu8uj" path="res://sound_effects/Sound effects Mini Pack1.5/Jump/MP3/Jump1.mp3" id="34_p5ph3"]
[ext_resource type="Script" path="res://scripts/Player/States/player_crouching.gd" id="34_pttvr"]
[ext_resource type="AudioStream" uid="uid://cy17mec2bswyp" path="res://sound_effects/Sound effects Mini Pack1.5/Jump/MP3/Jump2.mp3" id="35_8hrb0"]
[ext_resource type="AudioStream" uid="uid://bilhqhjlexkrx" path="res://sound_effects/Sound effects Mini Pack1.5/Hit/MP3/Hit1.mp3" id="36_8kr2d"]
[ext_resource type="AudioStream" uid="uid://i6m683bsrek2" path="res://sound_effects/Sound effects Mini Pack1.5/Hit/MP3/Hit.mp3" id="36_76euv"]
[ext_resource type="AudioStream" uid="uid://3ueycvk8ihu8" path="res://sound_effects/Sound effects Mini Pack1.5/Hit/MP3/Hit2.mp3" id="38_56fa4"]
[ext_resource type="AudioStream" uid="uid://b41wx8ewpohof" path="res://sound_effects/Sound effects Mini Pack1.5/Coins/MP3/Coin.mp3" id="39_b4oys"]
[ext_resource type="AudioStream" uid="uid://b3r1e4n4vbqjb" path="res://sound_effects/Sound effects Mini Pack1.5/Coins/MP3/Coin2.mp3" id="40_onv04"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wnecl"]
radius = 9.0
height = 24.32

[sub_resource type="SpriteFrames" id="SpriteFrames_be77h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tymr5")
}, {
"duration": 1.0,
"texture": ExtResource("3_7lrp0")
}, {
"duration": 1.0,
"texture": ExtResource("4_butdf")
}],
"loop": true,
"name": &"Climbing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_10uod")
}, {
"duration": 1.0,
"texture": ExtResource("6_6vwp5")
}],
"loop": true,
"name": &"Crouching",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("7_cp6hc")
}, {
"duration": 2.0,
"texture": ExtResource("8_tndvr")
}],
"loop": true,
"name": &"Dying",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_k50ao")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6gqi5")
}, {
"duration": 1.0,
"texture": ExtResource("3_62rup")
}, {
"duration": 1.0,
"texture": ExtResource("4_07ndu")
}, {
"duration": 1.0,
"texture": ExtResource("5_gkfwk")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_4xbbu")
}],
"loop": true,
"name": &"Jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_k3h7w")
}, {
"duration": 1.0,
"texture": ExtResource("16_faxn5")
}, {
"duration": 1.0,
"texture": ExtResource("17_cq15p")
}, {
"duration": 1.0,
"texture": ExtResource("18_1qroo")
}, {
"duration": 1.0,
"texture": ExtResource("19_timjc")
}, {
"duration": 1.0,
"texture": ExtResource("20_cfqvn")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqxor"]
size = Vector2(13.125, 14.6394)

[sub_resource type="CircleShape2D" id="CircleShape2D_e8fi7"]
radius = 11.0454

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tl3te"]
size = Vector2(8, 11)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 2
collision_layer = 8
script = ExtResource("1_1ejx3")
jump_velocity = -300.0

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.84)
shape = SubResource("CapsuleShape2D_wnecl")
debug_color = Color(0.972409, 0.141243, 0.226641, 0.42)
script = ExtResource("2_kycny")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_be77h")
animation = &"Crouching"
autoplay = "Idle"
script = ExtResource("21_khnir")

[node name="OffensiveArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("23_towy0")

[node name="OffensiveHitbox" type="CollisionShape2D" parent="OffensiveArea"]
position = Vector2(2.38419e-07, 18)
scale = Vector2(1.06667, 0.322857)
shape = SubResource("RectangleShape2D_yqxor")

[node name="CollectableArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("24_ei36t")

[node name="CollectableHitbox" type="CollisionShape2D" parent="CollectableArea"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_e8fi7")
debug_color = Color(0.203001, 0.631424, 0.320713, 0.42)

[node name="PlayerInteractArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64
monitorable = false
script = ExtResource("25_uofy8")

[node name="InteractHitbox" type="CollisionShape2D" parent="PlayerInteractArea"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_e8fi7")
debug_color = Color(0.203001, 0.631424, 0.320713, 0.42)

[node name="PlayerClimbableArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 128
monitorable = false
script = ExtResource("26_g813b")

[node name="ClimbHitbox" type="CollisionShape2D" parent="PlayerClimbableArea"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_tl3te")
debug_color = Color(0.703142, 0.4891, 0.0846322, 0.42)

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("21_cwfjb")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("22_h6556")

[node name="Falling" type="Node" parent="PlayerStateMachine"]
script = ExtResource("25_g30nj")

[node name="Moving" type="Node" parent="PlayerStateMachine"]
script = ExtResource("23_pb7fr")

[node name="Jumping" type="Node" parent="PlayerStateMachine"]
script = ExtResource("24_6bulw")

[node name="Dying" type="Node" parent="PlayerStateMachine"]
script = ExtResource("26_wvaxf")

[node name="Climbing" type="Node" parent="PlayerStateMachine"]
script = ExtResource("33_n46td")

[node name="Crouching" type="Node" parent="PlayerStateMachine"]
script = ExtResource("34_pttvr")

[node name="CameraVisibilityNotifier" type="VisibleOnScreenNotifier2D" parent="."]
script = ExtResource("31_hscjk")

[node name="Input" type="Node2D" parent="."]
script = ExtResource("32_ry7qn")

[node name="PlayerSoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"Sfx"
script = ExtResource("33_vix47")
jump_sound = Array[AudioStream]([ExtResource("34_p5ph3"), ExtResource("35_8hrb0")])
hurt_sound = Array[AudioStream]([ExtResource("36_8kr2d"), ExtResource("36_76euv"), ExtResource("38_56fa4")])
collect_sound = Array[AudioStream]([ExtResource("39_b4oys"), ExtResource("40_onv04")])

[connection signal="body_entered" from="OffensiveArea" to="OffensiveArea" method="_on_body_entered"]
[connection signal="area_entered" from="CollectableArea" to="CollectableArea" method="_on_area_entered"]
[connection signal="area_entered" from="PlayerInteractArea" to="PlayerInteractArea" method="_on_area_entered"]
[connection signal="area_exited" from="PlayerInteractArea" to="PlayerInteractArea" method="_on_area_exited"]
[connection signal="area_entered" from="PlayerClimbableArea" to="PlayerClimbableArea" method="_on_area_entered"]
[connection signal="area_exited" from="PlayerClimbableArea" to="PlayerClimbableArea" method="_on_area_exited"]
[connection signal="screen_exited" from="CameraVisibilityNotifier" to="CameraVisibilityNotifier" method="_on_screen_exited"]
[connection signal="finished" from="PlayerSoundEffects" to="PlayerSoundEffects" method="_on_finished"]
